Fix for scroll overflow

--- a/grapher/global.css
+++ b/grapher/global.css
@@ -1,7 +1,9 @@
-html, body {
+html,
+body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
 body {
@@ -9,11 +11,12 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	overscroll-behavior-y: none;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(0, 100, 200);
 	text-decoration: none;
 }
 
@@ -22,14 +25,17 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(0, 80, 160);
 }
 
 label {
 	display: block;
 }
 
-input, button, select, textarea {
+input,
+button,
+select,
+textarea {
 	font-family: inherit;
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
@@ -40,7 +46,8 @@ input, button, select, textarea {
 	border-radius: 2px;
 }
 
-input:disabled, input:read-only {
+input:disabled,
+input:read-only {
 	color: #ccc;
 	cursor: default;
 }
